// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TransactionListItem when account has insufficient balance to cover gas should display correctly the custody icon if status is rejected 1`] = `
"[36m<div[39m
  [33mclass[39m=[32m\\"mm-box\\"[39m
  [33mdata-testid[39m=[32m\\"custody-icon\\"[39m
  [33mstyle[39m=[32m\\"position: relative;\\"[39m
[36m>[39m
  [36m<div[39m
    [33mclass[39m=[32m\\"mm-box mm-text mm-avatar-base mm-avatar-base--size-md mm-avatar-icon mm-text--body-sm mm-text--text-transform-uppercase mm-box--display-flex mm-box--justify-content-center mm-box--align-items-center mm-box--color-error-default mm-box--background-color-error-muted mm-box--rounded-full mm-box--border-color-transparent box--border-style-solid box--border-width-1\\"[39m
  [36m>[39m
    [36m<span[39m
      [33mclass[39m=[32m\\"mm-box mm-icon mm-icon--size-md mm-box--display-inline-block mm-box--color-inherit\\"[39m
      [33mstyle[39m=[32m\\"mask-image: url('./images/icons/arrow-2-up-right.svg');\\"[39m
    [36m/>[39m
  [36m</div>[39m
  [36m<span[39m
    [33mclass[39m=[32m\\"mm-box transaction-list-item__icon-badge mm-icon mm-icon--size-xs mm-box--display-inline-block mm-box--color-error-default\\"[39m
    [33mstyle[39m=[32m\\"mask-image: url('./images/icons/custody.svg');\\"[39m
  [36m/>[39m
[36m</div>[39m"
`;

exports[`TransactionListItem when account has insufficient balance to cover gas should display correctly the custody icon if status is signed 1`] = `
"[36m<div[39m
  [33mclass[39m=[32m\\"mm-box\\"[39m
  [33mdata-testid[39m=[32m\\"custody-icon\\"[39m
  [33mstyle[39m=[32m\\"position: relative;\\"[39m
[36m>[39m
  [36m<div[39m
    [33mclass[39m=[32m\\"mm-box mm-text mm-avatar-base mm-avatar-base--size-md mm-avatar-icon mm-text--body-sm mm-text--text-transform-uppercase mm-box--display-flex mm-box--justify-content-center mm-box--align-items-center mm-box--color-primary-default mm-box--background-color-primary-muted mm-box--rounded-full mm-box--border-color-transparent box--border-style-solid box--border-width-1\\"[39m
  [36m>[39m
    [36m<span[39m
      [33mclass[39m=[32m\\"mm-box mm-icon mm-icon--size-md mm-box--display-inline-block mm-box--color-inherit\\"[39m
      [33mstyle[39m=[32m\\"mask-image: url('./images/icons/arrow-2-up-right.svg');\\"[39m
    [36m/>[39m
  [36m</div>[39m
  [36m<span[39m
    [33mclass[39m=[32m\\"mm-box transaction-list-item__icon-badge mm-icon mm-icon--size-xs mm-box--display-inline-block mm-box--color-icon-alternative\\"[39m
    [33mstyle[39m=[32m\\"mask-image: url('./images/icons/custody.svg');\\"[39m
  [36m/>[39m
[36m</div>[39m"
`;

exports[`TransactionListItem when account has insufficient balance to cover gas should have a custodian Tx and show the custody icon 1`] = `
"[36m<div[39m
  [33mclass[39m=[32m\\"mm-box\\"[39m
  [33mdata-testid[39m=[32m\\"custody-icon\\"[39m
  [33mstyle[39m=[32m\\"position: relative;\\"[39m
[36m>[39m
  [36m<div[39m
    [33mclass[39m=[32m\\"mm-box mm-text mm-avatar-base mm-avatar-base--size-md mm-avatar-icon mm-text--body-sm mm-text--text-transform-uppercase mm-box--display-flex mm-box--justify-content-center mm-box--align-items-center mm-box--color-primary-default mm-box--background-color-primary-muted mm-box--rounded-full mm-box--border-color-transparent box--border-style-solid box--border-width-1\\"[39m
  [36m>[39m
    [36m<span[39m
      [33mclass[39m=[32m\\"mm-box mm-icon mm-icon--size-md mm-box--display-inline-block mm-box--color-inherit\\"[39m
      [33mstyle[39m=[32m\\"mask-image: url('./images/icons/arrow-2-up-right.svg');\\"[39m
    [36m/>[39m
  [36m</div>[39m
  [36m<span[39m
    [33mclass[39m=[32m\\"mm-box transaction-list-item__icon-badge mm-icon mm-icon--size-xs mm-box--display-inline-block mm-box--color-primary-default\\"[39m
    [33mstyle[39m=[32m\\"mask-image: url('./images/icons/custody.svg');\\"[39m
  [36m/>[39m
[36m</div>[39m"
`;

exports[`TransactionListItem when account has insufficient balance to cover gas should test 1`] = `
"[36m<div[39m
  [33mclass[39m=[32m\\"mm-box\\"[39m
  [33mdata-testid[39m=[32m\\"custody-icon\\"[39m
  [33mstyle[39m=[32m\\"position: relative;\\"[39m
[36m>[39m
  [36m<div[39m
    [33mclass[39m=[32m\\"mm-box mm-text mm-avatar-base mm-avatar-base--size-md mm-avatar-icon mm-text--body-sm mm-text--text-transform-uppercase mm-box--display-flex mm-box--justify-content-center mm-box--align-items-center mm-box--color-primary-default mm-box--background-color-primary-muted mm-box--rounded-full mm-box--border-color-transparent box--border-style-solid box--border-width-1\\"[39m
  [36m>[39m
    [36m<span[39m
      [33mclass[39m=[32m\\"mm-box mm-icon mm-icon--size-md mm-box--display-inline-block mm-box--color-inherit\\"[39m
      [33mstyle[39m=[32m\\"mask-image: url('./images/icons/arrow-2-up-right.svg');\\"[39m
    [36m/>[39m
  [36m</div>[39m
  [36m<span[39m
    [33mclass[39m=[32m\\"mm-box transaction-list-item__icon-badge mm-icon mm-icon--size-xs mm-box--display-inline-block mm-box--color-icon-alternative\\"[39m
    [33mstyle[39m=[32m\\"mask-image: url('./images/icons/custody.svg');\\"[39m
  [36m/>[39m
[36m</div>[39m"
`;
